# jonkler-tanks

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  botHowTo.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: App.h  main.c
src/SDL/: SDL_main.c  SDL_main.h  SDL_render.c  SDL_render.h  event_handlers.c  event_handlers.h  play_music.c  play_music.h  ui_helpers.c  ui_helpers.h
src/UI/: help_render.c  help_render.h  leaderboard_render.c  leaderboard_render.h  main_menu_render.c  main_menu_render.h  obstacle.c  obstacle.h  play_render.c  play_render.h  settings_render.c  settings_render.h  ui_helpers.c
src/game/: animations.c  animations.h  autosave.c  autosave.h  bot.c  bot.h  gen_map.c  gen_map.h  obstacle.c  obstacle.h  obstacle_struct.h  player_movement.c  player_movement.h  settings.c  settings.h
src/game/customBots/: bot1.c  bot1.h  bot2.c  bot2.h  bot3.c  bot3.h
src/game/specialConditions/: buffsStruct.h  spread.c  spread.h  wind.c  wind.h  windStruct.h
src/math/: math.c  math.h  perlin.c  perlin.h  physics.c  physics.h  rand.c  rand.h
